# irt2-bow

./: .gitignore  LICENSE  README.md  setup.cfg
elastic/: .env.example  docker-compose.yaml
irt2_bow/: __init__.py  blp_linking.py  elastic.py  eval_kgc.py  index_irt2.py  indexing_by_splits.py  irt2_indexing.py  irt2_linking.py  irt2_text_selection.py  retriever.py  types.py  utils.py
irt2_bow/kgc/: bow_kgc_baseline.py  eval_kgc.py
irt2_bow/ranking/: irt2_ranking.py
notebooks/: build_mid_text_mapping.ipynb
scripts/: run_blp_indexing.sh  run_blp_linking_exps.sh  run_indexing.sh  run_irt2_indexing.sh  run_irt2_indexing_splits.sh  run_irt2_text-selection.sh  run_kgc_exps.sh  run_kgc_subsample_exps.sh  run_linking_exps.sh  run_linking_subsample_exps.sh
