[metadata]
name = irt2-bow
version = 0.1
author = Maurice Falk
author_email = maurice.falk@hs-rm.de
description = BoW Baseline for IRT2

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.11
install_requires =
    elasticsearch==8.13.1
    pydantic==2.7.1

[options.entry_points]
console_scripts =
    irt2-indexing=irt2_bow.irt2_indexing:main
    irt2-linking=irt2_bow.irt2_linking:main
    eval-kgc=irt2_bow.eval_kgc:main
    
[options.extras_require]
dev =
  black
  flake8


[flake8]
# black default
max-line-length = 90
ignore =
  D105  # docstring for magic methods
  D107  # docstring in __init__

